--- a/pr-preview/pr-10/LICENSE/index.html
+++ b/pr-preview/pr-10/LICENSE/index.html
@@ -517,8 +517,8 @@ license terms.</p>
 <p>Under the following terms:</p>
 <ul>
 <li><strong>Attribution</strong>---You must give appropriate credit (mentioning that
-  your work is derived from work that is Copyright © ACCESS-NRI and, where practical, linking to
-  https://www.access-nri.org.au/), provide a <a href="https://creativecommons.org/licenses/by/4.0/">link to the
+  your work is derived from work that is <em>Copyright © ACCESS-NRI</em> and, where practical, linking to
+  <em><a href="https://www.access-nri.org.au">https://www.access-nri.org.au</a></em>, provide a <a href="https://creativecommons.org/licenses/by/4.0/">link to the
   license</a>, and indicate if changes were made. You may do
   so in any reasonable manner, but not in any way that suggests the
   licensor endorses you or your use.</li>
